# JotunnC

./: .gitmodules  CMakeLists.txt  Makefile  jotunn.code-workspace  readme.md  readme.txt
BoilerPlateApp/: CMakeLists.txt  Makefile  ball_ui.c  ball_ui.h  ball_ui_clay.c  ball_ui_clay.h  ball_window.c  ball_window.h  main.c
Jotunn/: CMakeLists.txt  Makefile
Jotunn/include/: application.h  camera.h  event.h  fmatrix.h  font.h  fquaternion.h  framebuffer.h  fvector.h  render_api.h  renderable_2d.h  renderable_2d_primitive.h  renderer.h  renderer_2d.h  renderer_window_layer.h  shader.h  texture.h  timestep.h  ui_element.h  ui_layer.h  ui_layer_clay.h  util.h  vertexarray.h  vertexattribute.h  vertexbuffer.h  window.h  window_layer.h
Jotunn/res/shaders/: circle_2d_shader.frag  framebuffer_shader.frag  framebuffer_shader.vert  line_2d_shader.vert  renderable_2d.frag  renderable_2d.vert  textured_quad_2d_shader.frag  textured_quad_2d_shader.vert  triangle_2d_shader.vert
Jotunn/src/Core/Application/: application.c  window.c
Jotunn/src/core/application/: application.c  timestep.c  ui_element.c  ui_layer.c  ui_layer_clay.c  window.c  window_layer.c
Jotunn/src/core/graphics/: camera.c  renderable_2d.c  renderable_2d_primitive.c  renderer.c  renderer_2d.c  renderer_window_layer.c
Jotunn/src/core/graphics/api/: render_api.c
Jotunn/src/core/graphics/datatypes/: font.c  framebuffer.c  shader.c  texture.c  vertexarray.c  vertexattribute.c  vertexbuffer.c
Jotunn/src/core/utils/: util.c
Jotunn/src/math/: fmatrix.c  fquaternion.c  fvector.c
Jotunn/src/platform/application/: window_gl.c  window_no_backend.c
Jotunn/src/platform/graphics/api/: render_api_no_backend.c  render_api_opengl.c
Jotunn/src/platform/graphics/datatypes/: framebuffer_gl.c  framebuffer_no_backend.c  shader_gl.c  shader_no_backend.c  texture_gl.c  texture_no_backend.c  vertexarray_gl.c  vertexarray_no_backend.c  vertexattribute_gl.c  vertexattribute_no_backend.c  vertexbuffer_gl.c  vertexbuffer_no_backend.c
Jotunn/tests/: Makefile
Jotunn/tests/mathtests/: Makefile
Jotunn/tests/mathtests/matrixtests/: Makefile  matrixtests.cpp
Jotunn/tests/mathtests/vectortests/: Makefile  vectortests.cpp
TestApp/: CMakeLists.txt  Makefile  main.c
